[package]
name = "compile_with_bazel"
version = "0.0.0"

[dependencies]
bitflags = "1.0.1"
libc = "0.2.36"
lazy_static = "1.0.0"
memchr = "2.0.1"
log = "0.4.1"
serde = "1.0.27"
rand = "0.4.2"
unicode-xid = "0.1.0"
regex = "0.2.5"
thread_local = "0.3.5"
aho-corasick = "0.6.4"
num-traits = "0.1.41"
regex-syntax = "0.4.2"
serde_json = "1.0.9"
utf8-ranges = "1.0.0"
serde_derive = "1.0.27"
syn = "0.12.7"
unreachable = "1.0.0"
byteorder = "1.2.1"
quote = "0.4.2"
cfg-if = "0.1.2"
itoa = "0.3.4"
dtoa = "0.4.2"
serde_derive_internals = "0.19.0"
num_cpus = "1.8.0"
url = "1.6.0"
void = "1.0.2"
semver = "0.9.0"
synom = "0.11.3"
winapi = "0.3.4"
cc = "1.0.4"
env_logger = "0.5.2"
rustc-serialize = "0.3.24"
time = "0.1.39"
unicode-bidi = "0.3.4"
num-integer = "0.1.35"
#winapi-build
#kernel32-sys
num-iter = "0.1.34"
matches = "0.1.6"
error-chain = "0.11.0"
unicode-normalization = "0.1.5"
idna = "0.1.4"
toml = "0.4.5"
percent-encoding = "1.0.1"
pkg-config = "0.3.9"
num = "0.1.14"
clap = "2.29.2"
strsim = "0.7.0"
slab = "0.4.0"
ansi_term = "0.10.2"
atty = "0.2.6"
smallvec = "0.6.0"
either = "1.4.0"
backtrace = "0.3.5"
vec_map = "0.8.0"
textwrap = "0.9.0"
unicode-width = "0.1.4"
gcc = "0.3.54"
futures = "0.1.17"
base64 = "0.9.0"
crossbeam = "0.3.2"
rustc-demangle = "0.1.5"
scopeguard = "0.3.3"
net2 = "0.2.31"
openssl-sys = "0.9.24"
lazycell = "0.6.0"
unicase = "2.1.0"
mime = "0.3.5"
hyper = "0.11.14"
backtrace-sys = "0.1.16"
term = "0.4.6"
thread-id = "3.2.0"
semver-parser = "0.7.0"
tempdir = "0.3.5"
openssl = "0.10.2"
scoped-tls = "0.1.0"
chrono = "0.4.0"
rayon = "0.9.0"
httparse = "1.2.4"
mio = "0.6.12"
num-rational = "0.1.40"
pulldown-cmark = "0.1.0"
itertools = "0.7.6"
fnv = "1.0.6"
foreign-types = "0.3.2"
getopts = "0.2.15"
rayon-core = "1.3.0"
bytes = "0.4.6"
syntex_syntax = "0.59.1"
iovec = "0.1.1"
syntex_pos = "0.59.1"
syntex_errors = "0.59.1"
coco = "0.3.4"
flate2 = "1.0.1"
safemem = "0.2.0"
siphasher = "0.2.2"
walkdir = "2.0.1"
miniz-sys = "0.1.10"
num-complex = "0.1.41"

[lib]
path = "fake_lib.rs"

[raze]
workspace_path = "//cargo"
target = "x86_64-unknown-linux-gnu"
genmode = "Remote"

[raze.crates.openssl-sys.'0.9.24']
additional_flags = [
  # Vendored openssl is 1.0.2m
  "--cfg=ossl102",
  "--cfg=version=102",
]
additional_deps = [
  "@//third_party/openssl:crypto",
  "@//third_party/openssl:ssl",
]

[raze.crates.openssl.'0.10.2']
additional_flags = [
  # Vendored openssl is 1.0.2m
  "--cfg=ossl102",
  "--cfg=version=102",
  "--cfg=ossl10x",
]

[raze.crates.unicase.'2.1.0']
additional_flags = [
  # Rustc is 1.15, enable all optional settings
  "--cfg=__unicase__iter_cmp",
  "--cfg=__unicase__defauler_hasher",
]

[raze.crates.extprim.'1.5.1']
additional_flags = [
  "--cfg='extprim_channel=\\\"unstable\\\"'"
]
